vm/parser.output

state 0
	$accept: .statements $end 
	statements: .    (1)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 1 (src line 60)

	statements  goto 1
	statement  goto 2
	expr  goto 3
	bool  goto 6

state 1
	$accept:  statements.$end 

	$end  accept
	.  error


state 2
	statements:  statement.statements 
	statements: .    (1)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 1 (src line 60)

	statements  goto 16
	statement  goto 2
	expr  goto 3
	bool  goto 6

state 3
	statement:  expr.    (3)

	.  reduce 3 (src line 76)


state 4
	expr:  NUMBER.    (6)

	.  reduce 6 (src line 92)


state 5
	expr:  IDENT.    (7)

	.  reduce 7 (src line 96)


state 6
	expr:  bool.    (8)

	.  reduce 8 (src line 100)


state 7
	expr:  NIL.    (9)

	.  reduce 9 (src line 104)


state 8
	expr:  '-'.expr 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 17
	bool  goto 6

state 9
	expr:  KEYWORD.    (11)

	.  reduce 11 (src line 112)


state 10
	expr:  STRING.    (12)

	.  reduce 12 (src line 116)


state 11
	expr:  '['.exprs ']' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 18
	expr  goto 19
	bool  goto 6

state 12
	expr:  '{'.expr_pairs '}' 
	expr_pairs: .    (28)

	.  reduce 28 (src line 171)

	expr_pairs  goto 20

state 13
	expr:  '('.FN fns ')' 
	expr:  '('.FN args exprs ')' 
	expr:  '('.expr exprs ')' 
	expr:  '('.DEF IDENT expr ')' 
	expr:  '('.IF expr expr ')' 
	expr:  '('.IF expr expr expr ')' 
	expr:  '('.QUOTE expr exprs ')' 
	expr:  '('.'=' exprs ')' 
	expr:  '('.'+' exprs ')' 
	expr:  '('.'-' exprs ')' 
	expr:  '('.'*' exprs ')' 
	expr:  '('.'/' exprs ')' 
	expr:  '('.'%' exprs ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	DEF  shift 23
	IF  shift 24
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	FN  shift 21
	QUOTE  shift 25
	'+'  shift 27
	'-'  shift 28
	'*'  shift 29
	'/'  shift 30
	'%'  shift 31
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	'='  shift 26
	.  error

	expr  goto 22
	bool  goto 6

state 14
	bool:  TRUE.    (37)

	.  reduce 37 (src line 209)


state 15
	bool:  FALSE.    (38)

	.  reduce 38 (src line 212)


state 16
	statements:  statement statements.    (2)

	.  reduce 2 (src line 68)


state 17
	expr:  '-' expr.    (10)

	.  reduce 10 (src line 108)


state 18
	expr:  '[' exprs.']' 

	']'  shift 32
	.  error


state 19
	exprs:  expr.exprs 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 33
	expr  goto 19
	bool  goto 6

state 20
	expr:  '{' expr_pairs.'}' 
	expr_pairs:  expr_pairs.expr expr 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'}'  shift 34
	'('  shift 13
	.  error

	expr  goto 35
	bool  goto 6

state 21
	expr:  '(' FN.fns ')' 
	expr:  '(' FN.args exprs ')' 

	'['  shift 39
	'('  shift 40
	.  error

	fn  goto 38
	fns  goto 36
	args  goto 37

state 22
	expr:  '(' expr.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 41
	expr  goto 19
	bool  goto 6

state 23
	expr:  '(' DEF.IDENT expr ')' 

	IDENT  shift 42
	.  error


state 24
	expr:  '(' IF.expr expr ')' 
	expr:  '(' IF.expr expr expr ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 43
	bool  goto 6

state 25
	expr:  '(' QUOTE.expr exprs ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 44
	bool  goto 6

state 26
	expr:  '(' '='.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 45
	expr  goto 19
	bool  goto 6

state 27
	expr:  '(' '+'.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 46
	expr  goto 19
	bool  goto 6

state 28
	expr:  '-'.expr 
	expr:  '(' '-'.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 48
	expr  goto 47
	bool  goto 6

state 29
	expr:  '(' '*'.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 49
	expr  goto 19
	bool  goto 6

state 30
	expr:  '(' '/'.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 50
	expr  goto 19
	bool  goto 6

state 31
	expr:  '(' '%'.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 51
	expr  goto 19
	bool  goto 6

state 32
	expr:  '[' exprs ']'.    (13)

	.  reduce 13 (src line 120)


state 33
	exprs:  expr exprs.    (5)

	.  reduce 5 (src line 87)


state 34
	expr:  '{' expr_pairs '}'.    (14)

	.  reduce 14 (src line 124)


state 35
	expr_pairs:  expr_pairs expr.expr 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 52
	bool  goto 6

state 36
	expr:  '(' FN fns.')' 
	fns:  fns.fn 

	'('  shift 40
	')'  shift 53
	.  error

	fn  goto 54

state 37
	expr:  '(' FN args.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 55
	expr  goto 19
	bool  goto 6

state 38
	fns:  fn.    (31)

	.  reduce 31 (src line 188)


state 39
	args:  '['.idents ']' 
	args:  '['.idents '&' IDENT ']' 
	idents: .    (35)

	.  reduce 35 (src line 204)

	idents  goto 56

state 40
	fn:  '('.args exprs ')' 

	'['  shift 39
	.  error

	args  goto 57

state 41
	expr:  '(' expr exprs.')' 

	')'  shift 58
	.  error


state 42
	expr:  '(' DEF IDENT.expr ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 59
	bool  goto 6

state 43
	expr:  '(' IF expr.expr ')' 
	expr:  '(' IF expr.expr expr ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	expr  goto 60
	bool  goto 6

state 44
	expr:  '(' QUOTE expr.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 61
	expr  goto 19
	bool  goto 6

state 45
	expr:  '(' '=' exprs.')' 

	')'  shift 62
	.  error


state 46
	expr:  '(' '+' exprs.')' 

	')'  shift 63
	.  error


47: shift/reduce conflict (shift 5(0), red'n 10(3)) on IDENT
47: shift/reduce conflict (shift 4(0), red'n 10(3)) on NUMBER
47: shift/reduce conflict (shift 9(0), red'n 10(3)) on KEYWORD
47: shift/reduce conflict (shift 10(0), red'n 10(3)) on STRING
47: shift/reduce conflict (shift 14(0), red'n 10(3)) on TRUE
47: shift/reduce conflict (shift 15(0), red'n 10(3)) on FALSE
47: shift/reduce conflict (shift 7(0), red'n 10(3)) on NIL
47: shift/reduce conflict (shift 11(0), red'n 10(3)) on '['
47: shift/reduce conflict (shift 12(0), red'n 10(3)) on '{'
47: shift/reduce conflict (shift 13(0), red'n 10(3)) on '('
 47: reduce/reduce conflict  (red'ns 10 and 4) on ')'
state 47
	exprs:  expr.exprs 
	expr:  '-' expr.    (10)
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	')'  reduce 4 (src line 82)
	.  reduce 10 (src line 108)

	exprs  goto 33
	expr  goto 19
	bool  goto 6

state 48
	expr:  '(' '-' exprs.')' 

	')'  shift 64
	.  error


state 49
	expr:  '(' '*' exprs.')' 

	')'  shift 65
	.  error


state 50
	expr:  '(' '/' exprs.')' 

	')'  shift 66
	.  error


state 51
	expr:  '(' '%' exprs.')' 

	')'  shift 67
	.  error


state 52
	expr_pairs:  expr_pairs expr expr.    (29)

	.  reduce 29 (src line 176)


state 53
	expr:  '(' FN fns ')'.    (15)

	.  reduce 15 (src line 128)


state 54
	fns:  fns fn.    (32)

	.  reduce 32 (src line 193)


state 55
	expr:  '(' FN args exprs.')' 

	')'  shift 68
	.  error


state 56
	args:  '[' idents.']' 
	args:  '[' idents.'&' IDENT ']' 
	idents:  idents.IDENT 

	IDENT  shift 71
	']'  shift 69
	'&'  shift 70
	.  error


state 57
	fn:  '(' args.exprs ')' 
	exprs: .    (4)

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	.  reduce 4 (src line 82)

	exprs  goto 72
	expr  goto 19
	bool  goto 6

state 58
	expr:  '(' expr exprs ')'.    (17)

	.  reduce 17 (src line 136)


state 59
	expr:  '(' DEF IDENT expr.')' 

	')'  shift 73
	.  error


state 60
	expr:  '(' IF expr expr.')' 
	expr:  '(' IF expr expr.expr ')' 

	IDENT  shift 5
	NUMBER  shift 4
	KEYWORD  shift 9
	STRING  shift 10
	TRUE  shift 14
	FALSE  shift 15
	NIL  shift 7
	'-'  shift 8
	'['  shift 11
	'{'  shift 12
	'('  shift 13
	')'  shift 74
	.  error

	expr  goto 75
	bool  goto 6

state 61
	expr:  '(' QUOTE expr exprs.')' 

	')'  shift 76
	.  error


state 62
	expr:  '(' '=' exprs ')'.    (22)

	.  reduce 22 (src line 156)


state 63
	expr:  '(' '+' exprs ')'.    (23)

	.  reduce 23 (src line 160)


state 64
	expr:  '(' '-' exprs ')'.    (24)

	.  reduce 24 (src line 162)


state 65
	expr:  '(' '*' exprs ')'.    (25)

	.  reduce 25 (src line 164)


state 66
	expr:  '(' '/' exprs ')'.    (26)

	.  reduce 26 (src line 166)


state 67
	expr:  '(' '%' exprs ')'.    (27)

	.  reduce 27 (src line 168)


state 68
	expr:  '(' FN args exprs ')'.    (16)

	.  reduce 16 (src line 132)


state 69
	args:  '[' idents ']'.    (33)

	.  reduce 33 (src line 198)


state 70
	args:  '[' idents '&'.IDENT ']' 

	IDENT  shift 77
	.  error


state 71
	idents:  idents IDENT.    (36)

	.  reduce 36 (src line 206)


state 72
	fn:  '(' args exprs.')' 

	')'  shift 78
	.  error


state 73
	expr:  '(' DEF IDENT expr ')'.    (18)

	.  reduce 18 (src line 140)


state 74
	expr:  '(' IF expr expr ')'.    (19)

	.  reduce 19 (src line 144)


state 75
	expr:  '(' IF expr expr expr.')' 

	')'  shift 79
	.  error


state 76
	expr:  '(' QUOTE expr exprs ')'.    (21)

	.  reduce 21 (src line 152)


state 77
	args:  '[' idents '&' IDENT.']' 

	']'  shift 80
	.  error


state 78
	fn:  '(' args exprs ')'.    (30)

	.  reduce 30 (src line 182)


state 79
	expr:  '(' IF expr expr expr ')'.    (20)

	.  reduce 20 (src line 148)


state 80
	args:  '[' idents '&' IDENT ']'.    (34)

	.  reduce 34 (src line 201)


28 terminals, 11 nonterminals
39 grammar rules, 81/2000 states
10 shift/reduce, 1 reduce/reduce conflicts reported
60 working sets used
memory: parser 73/30000
60 extra closures
298 shift entries, 2 exceptions
36 goto entries
36 entries saved by goto default
Optimizer space used: output 182/30000
182 table entries, 57 zero
maximum spread: 28, maximum offset: 60
